<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2019 Kurt Aaholst <kaaholst@gmail.com>

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_nowplaying_trackinfo"
        android:title="@string/menu_nowplaying_trackinfo"
        android:icon="@drawable/ic_action_view_as_grid"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:id="@+id/menu_group_nowplaying_trackinfo"
                android:checkableBehavior="all">
                <item
                    android:id="@+id/menu_item_composer_line"
                    android:title="@string/settings_add_composer_line"
                    app:showAsAction="never"
                    />
				<item
                    android:id="@+id/menu_item_conductor_line"
                    android:title="@string/settings_add_conductor_line"
                    app:showAsAction="never"
                    />
				<item
                    android:id="@+id/menu_item_classical_music_tags"
                    android:title="@string/settings_band_instead_album"
                    app:showAsAction="never"
                    />					
            </group>			
         </menu>
    </item>
</menu>
